# gtk3-rs-template

./: .gitignore  Cargo.toml  README.md  resource.rs
assets/: assets.gresource.xml  net.olback.gtk3-rs-template.gresource.xml
assets/css/: app.css
assets/ui/: main.glade
src/: error.rs  macros.rs  main.rs  ui.rs
