[package]
name = "gtk3-rs-template"
version = "0.1.0"
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.14", features = [ "v3_22_30" ] }
giftwrap = "0.1"

[build-dependencies]
regex = "1.3"
last-git-commit = "0.2"
