[package]
name = "gtk3-rs-template"
version = "0.1.0"
authors = ["Edwin Svensson <gtk3-rs-template@olback.net>"]
edition = "2018"
build = "build/build.rs"
homepage = "https://github.com/olback/gtk3-rs-template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.14", features = [ "v3_22_30" ] }
giftwrap = "0.1"

[build-dependencies]
regex = "1.3"
last-git-commit = "0.2"
